cmake_minimum_required(VERSION 2.8)

include_directories(../..)

IF(PYTHON2_AVAILABLE)
    IF(TEST_RUNNER)
        IF(UNIX)
            add_test(NAME pythonColumnStoreExporter COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test/test_column_store_exporter.sh ${PYTHON2_EXECUTABLE} ipython)
        ENDIF(UNIX)
        IF(WIN32)
            add_test(NAME pythonColumnStoreExporter COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test/test_column_store_exporter.cmd ${PYTHON2_EXECUTABLE} ipython)
        ENDIF(WIN32)
    ENDIF(TEST_RUNNER)
    IF(UNIX)
        install(FILES columnStoreExporter.py DESTINATION ${PYTHON2_SITE_PACKAGES} COMPONENT pyspark)
        install(FILES mcsapi_reserved_words.txt DESTINATION ${PYTHON2_SITE_PACKAGES} COMPONENT pyspark)
    ENDIF(UNIX)
    IF(WIN32)
        install(FILES columnStoreExporter.py DESTINATION "${CMAKE_INSTALL_LIBDIR}/python${PYTHON2_VERSION}" COMPONENT pyspark)
        install(FILES mcsapi_reserved_words.txt DESTINATION "${CMAKE_INSTALL_LIBDIR}/python${PYTHON2_VERSION}" COMPONENT pyspark)
        # set global variables to be substituted by WIX package manager
        set(PYTHON2_COLUMNSTORE_EXPORTER "${CMAKE_CURRENT_SOURCE_DIR}/columnStoreExporter.py" PARENT_SCOPE)
        set(PYTHON2_RESERVED_WORDS "${CMAKE_CURRENT_SOURCE_DIR}/mcsapi_reserved_words.txt" PARENT_SCOPE)
    ENDIF(WIN32)
ENDIF(PYTHON2_AVAILABLE)

IF(PYTHON3_AVAILABLE)
    IF(TEST_RUNNER)
        IF(UNIX)
            add_test(NAME python3ColumnStoreExporter COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test/test_column_store_exporter.sh ${PYTHON3_EXECUTABLE} ipython3)
        ENDIF(UNIX)
        IF(WIN32)
            add_test(NAME python3ColumnStoreExporter COMMAND ${CMAKE_CURRENT_SOURCE_DIR}/test/test_column_store_exporter.cmd ${PYTHON3_EXECUTABLE} ipython3)
        ENDIF(WIN32)
    ENDIF(TEST_RUNNER)
    IF(UNIX)
        install(FILES columnStoreExporter.py DESTINATION ${PYTHON3_SITE_PACKAGES} COMPONENT pyspark3)
        install(FILES mcsapi_reserved_words.txt DESTINATION ${PYTHON3_SITE_PACKAGES} COMPONENT pyspark3)
    ENDIF(UNIX)
    IF(WIN32)
        install(FILES columnStoreExporter.py DESTINATION "${CMAKE_INSTALL_LIBDIR}/python${PYTHON3_VERSION}" COMPONENT pyspark3)
        install(FILES mcsapi_reserved_words.txt DESTINATION "${CMAKE_INSTALL_LIBDIR}/python${PYTHON3_VERSION}" COMPONENT pyspark3)
        # set global variables to be substituted by WIX package manager
        set(PYTHON3_COLUMNSTORE_EXPORTER "${CMAKE_CURRENT_SOURCE_DIR}/columnStoreExporter.py" PARENT_SCOPE)
        set(PYTHON3_RESERVED_WORDS "${CMAKE_CURRENT_SOURCE_DIR}/mcsapi_reserved_words.txt" PARENT_SCOPE)
    ENDIF(WIN32)
ENDIF(PYTHON3_AVAILABLE)
